# pyfeign

./: .gitignore  README.md  TODO.md  flake8.sh  mypy.sh  pyproject.toml  qa.sh  test.sh  tox.ini
.circleci/: config.yml
pyfeign/: __init__.py  config.py  main.py  serializer.py
tests/: test_pyfeign.py
tests/integ/: test_postman_echo.py
