[tool.poetry]
name = "pyfeign"
version = "0.1.0"
description = "Declarative"
authors = ["Chris White <chriswhite199@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
types-requests = "^2.27.7"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
markers = [
    "integration: integration tests (deselect with '-m \"!integration\"')"
]