[tool.poetry]
name = "pyfeign"
version = "0.1.0"
description = "Declarative Python HTTP Client, inspired by the OpenFeign java project"
license = "MIT"
authors = ["Chris White <chriswhite199@gmail.com>"]
readme = "README.md"
requires-python = ">=3.8"
homepage = "https://github.com/chriswhite199/pyfeign"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
types-requests = "^2.27.7"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
lxml = "^4.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
markers = [
    "integration: integration tests (deselect with '-m \"!integration\"')"
]